Minor styling changes. Fixed visual bug where the skin name would be beneath the skins thus invisible.

--- a/src/css/infopanel.scss
+++ b/src/css/infopanel.scss
@@ -94,6 +94,7 @@
     @extend %flex-prop;
     width: fit-content;
     width: 100%;
+    margin: 1em 0 0;
 }
 #champion-detail-abilities-container {
 	height: fit-content;
@@ -160,7 +161,6 @@
     width: 100%;
     height: fit-content;
     display: none;
-    margin: 1em 0;
 }
 #champion-detail-abilities-description{
     height: fit-content;
@@ -170,13 +170,14 @@
     width: 40%;
     @extend %border-abilities;
     max-width: 90%;
+    margin: 2em 0 0;
 }
 #champion-detail-abilities-video-container {
     @extend %flex-prop;
     align-items: flex-end;
     height: fit-content;
     width: 39%;
-    margin-left: 2em;
+    margin: 1em 0 0 2em;
     padding-right: 1.4em;
 }
 .champion-detail-abilities-videos {
@@ -235,19 +236,21 @@
     opacity: 0.3;
     @extend %flex-prop;
     transition: opacity .5s linear;
-    
+    position: absolute;
+    mask-image: linear-gradient(#000 65%, #0000 95%);
+    -webkit-mask-image: linear-gradient(#000 65%, #0000 95%);
 }
 #champion-detail-skins-name-container {
     @extend %flex-prop;
     width: 100%;
-    height: 95%;
+    height: 90%;
+    z-index: 2;
     align-items: flex-end;
     filter: drop-shadow(2px 4px 6px black);
 }
 #champion-detail-skins-name {
     filter: drop-shadow(2px 4px 6px black);
-    z-index: 2;
-    font-size: 2.5rem;
+    font-size: 2rem;
     background-color: #1d1d1dad;
     padding: 0.5em;
     color: pink;
